--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -24,7 +24,7 @@ jobs:
       # .env파일 생성. 웹을 만들다보면 유출되면 안되는 변수를 .env에 담는다. 배포할 때는 같이 빌드되어야하기 때문에 깃헙 액션으로 설정해줘야 한다.
       - name: Generate Environment Variables File for Production
         run: |
-          echo "VARIABLE=$VARIABLE" >> ./dir/.env
+          echo "VARIABLE=$VARIABLE >> ./dir/.env"
         env:
           VARIABLE: ${{ secrets.VARIABLE }}
 
