--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -32,8 +32,8 @@ jobs:
       - name: Proxy Build And Push
         uses: docker/build-push-action@v2
         with:
-          context: ./dir # dockerfile이 있는 위치랑 맞춰주자
-          file: ./dir/Dockerfile # 빌드할 Dockerfile이 있는 디렉토리
+          context: ./ # dockerfile이 있는 위치랑 맞춰주자
+          file: ./Dockerfile # 빌드할 Dockerfile이 있는 디렉토리
           platforms: linux/amd64 # 빌드할 때 사용할 환경.
           push: true # Dockerhub 푸쉬 여부
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/my-web # docker 이미지 이름
